Doc/force-app/main/default/objects/Account/fields/Account_CSM_Health_Rating_Previous__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Health_Rating_Previous__c</fullName>
    <label>Account CSM Health Rating - Previous</label>
    <length>100</length>
    <type>Text</type>
</CustomField>