Doc/force-app/main/default/objects/Account/fields/Account_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Account_Next_Step__c</fullName>
    <label>Account Next Step</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>