Doc/force-app/main/default/objects/Account/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <label>Account Owner Email</label>
    <type>Email</type>
</CustomField>