Doc/force-app/main/default/objects/Account/fields/Account_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Account_Recurring_Amount__c</fullName>
    <description>Sum of Closed Won opportunities Recurring Amount</description>
    <inlineHelpText>Sum of closed won opportunities recurring amount</inlineHelpText>
    <label>Recurring Amount</label>
    <summarizedField>Opportunity.Maintenance_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>