Doc/force-app/main/default/objects/Account/fields/Account_Recurring_Per_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Account_Recurring_Per_Lawyer__c</fullName>
    <description>Account Recurring Amount / Lawyers</description>
    <formula>Account_Recurring_Amount__c  /  Lawyers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual recurring amount per lawyer/professional</inlineHelpText>
    <label>Recurring Per Lawyer / Professional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>