Doc/force-app/main/default/objects/Account/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>Account Segment prioritizes and categorizes the accounts through a progression of engagement stages:
Customer - how many products? how many open/historic opportunities?
Prospect - how many open/Hx opportunities?
Suspect - Hx opportunities? IntApp connections? Leaders respoding to Campaigns?</description>
    <inlineHelpText>Note: responses are measured as Leaders with &quot;Responded&quot; checked for campaigns since July 1, 2010.</inlineHelpText>
    <label>Account Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hattrick</fullName>
            </value>
            <value>
                <fullName>2 Products - Lapsed 3rd</fullName>
            </value>
            <value>
                <fullName>2 Products - Open TB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - Open WB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - Open IB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - Competitor 3rd</fullName>
            </value>
            <value>
                <fullName>2 Products - Hx TB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - Hx WB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - Hx IB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - No Hx TB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - No Hx WB Oppy</fullName>
            </value>
            <value>
                <fullName>2 Products - No Hx IB Oppy</fullName>
            </value>
            <value>
                <fullName>1 Product - 1 or More Lapsed</fullName>
            </value>
            <value>
                <fullName>1 Product - 2 Open Opps</fullName>
            </value>
            <value>
                <fullName>1 Product - 1 Open Oppy</fullName>
            </value>
            <value>
                <fullName>1 Product - 2 Hx Opps</fullName>
            </value>
            <value>
                <fullName>1 Product - 1 Hx Oppy</fullName>
            </value>
            <value>
                <fullName>1 Product - No Hx Opps</fullName>
            </value>
            <value>
                <fullName>0 Products - 1 or More Lapsed</fullName>
            </value>
            <value>
                <fullName>0 Products - 3 Open Opps</fullName>
            </value>
            <value>
                <fullName>0 Products - 2 Open Opps</fullName>
            </value>
            <value>
                <fullName>0 Products - 1 Open Oppy</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - W/ Hx Opps - W/ IntApp Connections</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - W/ Hx Opps - 0 Connections - &gt;2 Responses</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - W/ Hx Opps - 0 Connections - 1-2 Responses</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - W/ Hx Opps - 0 Connections - 0 Responses</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - 0 Hx Opps - W/ IntApp Connections</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - 0 Hx Opps - 0 Connections - &gt;2 Responses</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - 0 Hx Opps - 0 Connections - 1-2 Responses</fullName>
            </value>
            <value>
                <fullName>0 Products - 0 Open Opps - 0 Hx Opps - 0 Connections - 0 Responses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>