Doc/force-app/main/default/objects/Account/fields/Account_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Short_Name__c</fullName>
    <label>Account Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>