Doc/force-app/main/default/objects/Account/fields/Account_Stage_Met_Detail__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage_Met_Detail__c</fullName>
    <label>Account Stage Met Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Department Director</fullName>
            </value>
            <value>
                <fullName>ED/COO/Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>