Doc/force-app/main/default/objects/Account/fields/AccountCSM_Health_Rating_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>AccountCSM_Health_Rating_Last_Modified__c</fullName>
    <label>AccountCSM Health Rating - Last Modified</label>
    <type>DateTime</type>
</CustomField>