Doc/force-app/main/default/objects/Account/fields/Accounting_Today_2017_Rank__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Today_2017_Rank__c</fullName>
    <description>Accounting Today 2017 Top 100 Rank</description>
    <inlineHelpText>What is this account ranked according to AccountingToday?</inlineHelpText>
    <label>Accounting Today 2017 Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>