Doc/force-app/main/default/objects/Account/fields/ACV_Potential_Tier__c.field-meta.xml
<CustomField>
    <fullName>ACV_Potential_Tier__c</fullName>
    <label>ACV Potential Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>