Doc/force-app/main/default/objects/Account/fields/All_Products__c.field-meta.xml
<CustomField>
    <fullName>All_Products__c</fullName>
    <description>Field on Account populate by flow that brings Product Lines values from all PODs where the Status = Own it</description>
    <inlineHelpText>Field on Account populate by flow that brings Product Lines values from all PODs where the Status = Own it</inlineHelpText>
    <label>All Products - MKTG USE ONLY</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>