Doc/force-app/main/default/objects/Account/fields/Alliance_Membership_Notes__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Membership_Notes__c</fullName>
    <description>As requested by Norm Mullock on 2/25/16. This field will be used to track accounts that belong to more than one Alliance Membership.</description>
    <label>Alliance Membership Notes</label>
    <type>TextArea</type>
</CustomField>