Doc/force-app/main/default/objects/Account/fields/AmLaw_200_Recent_Ranking__c.field-meta.xml
<CustomField>
    <fullName>AmLaw_200_Recent_Ranking__c</fullName>
    <description>Latest 2020 AmLaw 200 ranking</description>
    <inlineHelpText>Latest 2020 AmLaw 200 ranking</inlineHelpText>
    <label>AmLaw 200 Ranking 2020</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>