Doc/force-app/main/default/objects/Account/fields/Annual_Budget_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget_Submission_Deadline__c</fullName>
    <description>Annual Budget Submission deadline
Ticket 20666</description>
    <inlineHelpText>Please input Date in MM-DD Format only, no year</inlineHelpText>
    <label>Annual Budget Submission Deadline</label>
    <length>5</length>
    <type>Text</type>
</CustomField>