Doc/force-app/main/default/objects/Account/fields/App_Portfolio_Notes_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>App_Portfolio_Notes_Last_Modified__c</fullName>
    <description>This field tracks who last entered data into the Application Portfolio notes field.</description>
    <label>App Portfolio Notes Last Modified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>