Doc/force-app/main/default/objects/Account/fields/Application_Portfolio_Notes__c.field-meta.xml
<CustomField>
    <fullName>Application_Portfolio_Notes__c</fullName>
    <description>If any of the application portfolio notes are missing values, feel free to populate these values in this text field. To do that, use the field name along with the new value. For example: DMS – [insert new DMS name]”.</description>
    <label>Application Portfolio Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>