Doc/force-app/main/default/objects/Account/fields/Assets_Under_Management_AUM__c.field-meta.xml
<CustomField>
    <fullName>Assets_Under_Management_AUM__c</fullName>
    <label>Assets Under Management (AUM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>