Doc/force-app/main/default/objects/Account/fields/AVA_MAPPER__Entity_Use_code__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Entity_Use_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entity use codes indicate the reason for exemption.</description>
    <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
    <label>Entity/Use code</label>
    <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>