Doc/force-app/main/default/objects/Account/fields/AVA_SFCPQ__AvaTax_Exemption_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__AvaTax_Exemption_Customer_ID__c</fullName>
    <description>A unique ID used by AvaTax to apply exemptions. Please do not enter new value or edit this field.</description>
    <inlineHelpText>A unique ID used by AvaTax to apply exemptions. Please do not enter new value or edit this field.</inlineHelpText>
    <label>AvaTax Exemption Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>