Doc/force-app/main/default/objects/Account/fields/AVA_SFCPQ__AvaTaxCustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__AvaTaxCustomerStatus__c</fullName>
    <description>Displays the AvaTax Exemption customer status.</description>
    <formula>IMAGE(CASE(AVA_SFCPQ__AvaTaxMessage__c ,
&quot;Success&quot;, &quot;/img/msg_icons/confirm16.png&quot;,
&quot;Success: Email address is recommended&quot;, &quot;/img/msg_icons/confirm16.png&quot;,
&quot;Update customer to AvaTax Exemption&quot;, &quot;/img/msg_icons/warning16.png&quot;,
&quot;&quot;,&quot;/resource/not_available&quot;,
&quot;Error&quot;,&quot;/img/msg_icons/error16.png&quot;,
&quot;/img/msg_icons/error16.png&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the AvaTax Exemption customer status.</inlineHelpText>
    <label>AvaTax Customer Status</label>
    <type>Text</type>
</CustomField>