Doc/force-app/main/default/objects/Account/fields/AVA_SFCPQ__Email__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Email__c</fullName>
    <description>Primary email for the account.</description>
    <inlineHelpText>Primary email for the account.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>