Doc/force-app/main/default/objects/Account/fields/AVA_SFCPQ__Shipping_Address_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Shipping_Address_Validation_Status__c</fullName>
    <description>The existing status of the shipping address auto validation. Used to prevent the Avalara managed package from looping.</description>
    <inlineHelpText>The existing status of the shipping address auto validation. Used to prevent the Avalara managed package from looping.</inlineHelpText>
    <label>Shipping Address Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>