Doc/force-app/main/default/objects/Account/fields/AVA_SFCPQ__Validate_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Validate_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilize this field to auto-invoke the Avalara-managed package to validate the account shipping address based on upstream automation.</description>
    <inlineHelpText>Utilize this field to auto-invoke the Avalara-managed package to validate the account shipping address based on upstream automation.</inlineHelpText>
    <label>Validate Shipping Address</label>
    <type>Checkbox</type>
</CustomField>