Doc/force-app/main/default/objects/Account/fields/Backplane__c.field-meta.xml
<CustomField>
    <fullName>Backplane__c</fullName>
    <description>Backplane recall tracking. Refers to number of appliances that must be checked.</description>
    <inlineHelpText>Backplane recall tracking. Refers to number of appliances that must be checked.</inlineHelpText>
    <label>Backplane</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>