Doc/force-app/main/default/objects/Account/fields/BB_Version__c.field-meta.xml
<CustomField>
    <fullName>BB_Version__c</fullName>
    <description>Blackberry Version</description>
    <inlineHelpText>Blackberry Version</inlineHelpText>
    <label>BB Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>