Doc/force-app/main/default/objects/Account/fields/BI_KMPortfolio__c.field-meta.xml
<CustomField>
    <fullName>BI_KMPortfolio__c</fullName>
    <description>This is to designate the Litigation Support application in use at the account. This replaced the old checkbox system.</description>
    <inlineHelpText>What Business Intelligence software does this account use?</inlineHelpText>
    <label>BI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aderant BI</fullName>
            </value>
            <value>
                <fullName>BigSquare</fullName>
            </value>
            <value>
                <fullName>Catapult</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>DW Quantum</fullName>
            </value>
            <value>
                <fullName>Elite - Business Objects</fullName>
            </value>
            <value>
                <fullName>Helm360</fullName>
            </value>
            <value>
                <fullName>Iridium</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peppermint Technology</fullName>
            </value>
            <value>
                <fullName>QlikView</fullName>
            </value>
            <value>
                <fullName>Redwood Analytics</fullName>
            </value>
            <value>
                <fullName>Satori</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Wilson Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>