Doc/force-app/main/default/objects/Account/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chrome</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
            <value>
                <fullName>IE 6</fullName>
            </value>
            <value>
                <fullName>IE 7</fullName>
            </value>
            <value>
                <fullName>IE 8</fullName>
            </value>
            <value>
                <fullName>IE 9</fullName>
            </value>
            <value>
                <fullName>IE 10</fullName>
            </value>
            <value>
                <fullName>IE 11</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>